Fix possible crasher when PyGTK isn't available

If PyGTK is available at compile-time, but not available at run-time,
then we shouldn't try to call pyg_gil_state_ensure() as it would crash.

Print errors and disable Python support if PyGTK isn't available.

https://bugzilla.gnome.org/show_bug.cgi?id=615437